# lightning-talks

./: .gitignore  README.md  lightning-talks.cabal
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  main.jsx
frontend/src/assets/: MASCOTA.png:Zone.Identifier
frontend/src/components/: Card.jsx  Header.jsx  header.module.css
frontend/src/screens/: HomeScreen.js  HomeScreen.jsx  Login.js  Login.jsx
frontend/src/styles/: card.module.css  global.css  header.module.css  login.module.css
src/: Aeson.hs  DB.hs  LightningTalk.hs  LightningTalkQueries.hs  Main.hs  Member.hs  MemberGateway.hs  MemberQueries.hs  Server.hs
