cabal-version:      3.0
name:               lightning-talks
version:            0.1.0.0
synopsis:           API for Kokoa Lightning Talks.
description:        API for Kokoa Lightning Talks.
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Club Kokoa 2023
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable lightning-talks
    import:           warnings
    main-is:          Main.hs
    other-modules:    Member
                    , DB
                    , MemberQueries
                    , MemberGateway
                    , Server
                    , Aeson
                    , LightningTalk
                    , LightningTalkQueries
    build-depends:    base ^>=4.17.0.0
                    , servant
                    , servant-server
                    , wai
                    , wai-extra
                    , warp
                    , sqlite-simple
                    , text
                    , req
                    , aeson
                    , deriving-aeson
                    , lens
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:   OverloadedStrings
                        , DerivingVia
                        , DataKinds
                        , DeriveGeneric
                        , DerivingStrategies
                        , TypeFamilies
                        , ScopedTypeVariables
                        , TypeApplications
                        , FlexibleContexts
                        , TypeOperators

